# MVP-Maka

./: .env.example  .gitignore  Makefile  docker-compose.yml
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/versions/: a3f9c2e1b4d8_add_translation_cache.py  f80fda6d46f1_initial.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  security.py
backend/app/data/: characters.json  eras.json  reading_plan_365.json  stories.json  timeline_events.json
backend/app/models/: __init__.py  content.py  progress.py  reading_plan.py  translation.py  user.py
backend/app/routers/: auth.py  bible.py  content.py  reading_plan.py  users.py
backend/app/schemas/: auth.py  content.py  reading_plan.py  user.py
backend/app/services/: auth_service.py  bible_api_service.py  content_service.py  email_service.py  reading_plan_service.py  search_service.py  translation_service.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/landing/: FeaturesSection.tsx  HeroSection.tsx  PricingSection.tsx  TestimonialsSection.tsx  TimelinePreview.tsx
frontend/src/components/layout/: Footer.tsx  TopBar.tsx  (+1 more)
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: authStore.ts
frontend/src/types/: content.ts  user.ts
(+10 files in other folders)
